--- a/Lyric.ipynb
+++ b/Lyric.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -12,21 +12,21 @@
      "output_type": "stream",
      "text": [
       "b'Skipping line 693: expected 4 fields, saw 5\\nSkipping line 752: expected 4 fields, saw 5\\nSkipping line 942: expected 4 fields, saw 5\\nSkipping line 955: expected 4 fields, saw 5\\n'\n",
-      "  1%|          | 11456/1703479 [00:00<00:30, 56353.01it/s]"
+      "  1%|          | 21041/1703499 [00:00<00:16, 101669.33it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nb sequences  1703479\n"
+      "nb sequences  1703499\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1703479/1703479 [00:29<00:00, 57445.52it/s]\n"
+      "100%|██████████| 1703499/1703499 [00:15<00:00, 112628.50it/s]\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "database = pd.read_csv(name_csv, error_bad_lines=False)\n",
     "\n",
     "\n",
-    "maxlen = 40\n",
+    "maxlen = 20\n",
     "step = 1 # step size at every iteration\n",
     "sentences = [] # list of sequences\n",
     "next_chars = [] # list of next chracters that our model should predict\n",
@@ -66,7 +66,7 @@
     "for i, sentence in enumerate(tqdm(sentences)):\n",
     "    for t, char in enumerate(sentence):\n",
     "        x[i, t, char_indices[char]] = 1\n",
-    "        y[i, char_indices[next_chars[i]]] = 1\n"
+    "        y[i, char_indices[next_chars[i]]] = 1"
    ]
   },
   {
@@ -81,7 +81,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      " 369280/1703479 [=====>........................] - ETA: 6:51 - loss: 2.2044"
+      "1703499/1703499 [==============================] - 283s 166us/step - loss: 1.7640\n",
+      "\n",
+      "----- Generating text after Epoch: 0\n",
+      "----- diversity: 0.2\n",
+      "SRC = i wake up in the dream \n",
+      "\n",
+      "----- Generating with seed: \" wake up in the drea\"\n",
+      "----loss :  1.763954773247968\n",
+      "mon thing that you and i see it all i want to be something i'm a freak and i want to so water to so the start and i can see it i'm gonna got the start that i want to be the start in the good there we are it all the way i want to love you to be the start and i want to be a man i want the way i love you we to be your sead the start and i want to be the start on the start and i can't streed and i lik\n",
+      "----- diversity: 0.5\n",
+      "SRC = i wake up in the dream \n",
+      "\n",
+      "----- Generating with seed: \" wake up in the drea\"\n",
+      "----loss :  1.763954773247968\n",
+      "mans and you don't go bat of come this there on it a that that i'm so the say i'm a girl and i love you thing that you i'm got the got a camitess and i am i don't call that i'm the with a foorne show the love up the more free up and there the was on for and i want to be on the set you  in my hand of the sime and i could the start on the stard at the made fire it's go. i got a from the readin' and \n",
+      "----- diversity: 1.0\n",
+      "SRC = i wake up in the dream \n",
+      "\n",
+      "----- Generating with seed: \" wake up in the drea\"\n",
+      "----loss :  1.763954773247968\n",
+      "tle somaund old tructeris in my sal tire ever of a bo it's do your want and my never so beat it'ver lay you alo. take a let ma ne if you'll nve? see here all i'll me no them down rnow beame and grow don't think we do propsed  there now ain't it din't hear who so run too lising don't can hem\" dad as orty let the lines out our out think th. plan to dick don't get. the chucled you're loft a alweet 'c\n",
+      "----- diversity: 1.2\n",
+      "SRC = i wake up in the dream \n",
+      "\n",
+      "----- Generating with seed: \" wake up in the drea\"\n",
+      "----loss :  1.763954773247968\n",
+      "ms ar wromes and you lade a gatress goons thean geh. it've foget. up os my stim ored. i annere becker it's be your dirals by stronce. forget when i dart me. touch a back. it's dould't of me wrap you get strans. gut outoo  you're bead it weave? itgle hetergtle ney to devendit mo begievin' trabings why are iblandernes there and tolking. oh. ha-d  haw i ou? in your putchrnaple throwing wher in the cr\n",
+      "Epoch 2/50\n",
+      " 208000/1703499 [==>...........................] - ETA: 4:28 - loss: 1.5016"
      ]
     }
    ],
@@ -143,7 +171,7 @@
     "with open ('rpt.txt','w') as rpt:\n",
     "    rpt.write('epoch,lyric\\n')\n",
     "\n",
-    "def on_epoch_end(epoch, _ ):\n",
+    "def on_epoch_end(epoch,logs ):\n",
     "    # Function invoked at end of each epoch. Prints generated text.\n",
     "    print()\n",
     "    print('----- Generating text after Epoch: %d' % epoch)\n",
@@ -157,6 +185,7 @@
     "        print (\"SRC =\" , src , \"\\n\")\n",
     "        generated += sentence\n",
     "        print('----- Generating with seed: \"' + sentence + '\"')\n",
+    "        print ('----loss : ' ,logs['loss'])\n",
     "        for i in range(gen_length):\n",
     "            x_pred = np.zeros((1, maxlen, len(chars)))\n",
     "            for t, char in enumerate(sentence):\n",
@@ -173,6 +202,7 @@
     "        with open ('rpt.txt','a') as rpt:\n",
     "            rpt.write(\"epoch = {}\\n\".format(epoch))\n",
     "            rpt.write(\"diversity = {}\\n\".format(diversity))\n",
+    "            rpt.write(\"loss = {}\\n\".format(logs['loss']))\n",
     "            rpt.write(\"\\n\")\n",
     "            for buf in generated:\n",
     "                rpt.write(buf)\n",
@@ -184,7 +214,7 @@
     "src = 'i wake up in the dream'\n",
     "gen_length = 400\n",
     "print_callback = LambdaCallback(on_epoch_end=on_epoch_end)\n",
-    "checkpoint = keras.callbacks.ModelCheckpoint('model{epoch:08d}.h5', period=1, verbose=1) \n",
+    "checkpoint = keras.callbacks.ModelCheckpoint('model{epoch:08d}.h5', period=1, verbose=1 , save_best_only=True) \n",
     "\n",
     "model , last_epoch = search_last_model()\n",
     "optimizer = keras.optimizers.RMSprop(lr=0.001)\n",
